--- a/css/indexLight.css
+++ b/css/indexLight.css
@@ -604,19 +604,17 @@ div#welcomemessage ul li{
 }
 
 .projetsContainer_filter--title{
-    margin-left: 1rem;
     font-size: 3rem;
     width: 90%;
-    margin: 0 auto;
 }
 
 /*Filter part*/
 .projetsContainer_filter{
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     align-items: center;
     width: 90%;
-    margin: 0 auto;
+    margin-top: 2rem;
 }
 
 .projetsContainer_filter--instruction{
@@ -628,10 +626,8 @@ div#welcomemessage ul li{
 
 .projetsContainer_filter--options{
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     align-items: center;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
     white-space: nowrap;
     width: calc(100vw-18rem);
     margin-bottom: 1rem;
@@ -877,7 +873,7 @@ div#welcomemessage ul li{
 
 .blogContainer_filter{
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     align-items: center;
     width: 90%;
     margin: 2rem auto;
@@ -890,7 +886,7 @@ div#welcomemessage ul li{
 }
 .blogContainer_filter--options{
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
 }
 
 .blogContainer_filter--options img{
@@ -1218,5 +1214,14 @@ dialog::backdrop {
 
     .blogContainer_cards--post{
         width: 98%;
+    }
+
+    .blogContainer_filter--options{
+        margin: 1rem auto;
+    }
+
+    .projetsContainer_filter--options{
+        margin: 1rem auto;
+        justify-content: center;
     }
   }
